Fix wrong fonts specified in CSS

--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,20 +1,20 @@
 @font-face {
-  font-family: "Concourse T4";
-  src: url("../fonts/concourse-t4-regular.woff");
+  font-family: "Charter";
+  src: url("../fonts/charter-regular.woff");
 }
 @font-face {
-  font-family: "Concourse T4";
-  src: url("../fonts/concourse-t4-bold.woff");
+  font-family: "Charter";
+  src: url("../fonts/charter-bold.woff");
   font-weight: bold;
 }
 @font-face {
-  font-family: "Concourse T4";
-  src: url("../fonts/concourse-t4-italic.woff");
+  font-family: "Charter";
+  src: url("../fonts/charter-italic.woff");
   font-style: italic;
 }
 @font-face {
-  font-family: "Concourse T4";
-  src: url("../fonts/concourse-t4-bold-italic.woff");
+  font-family: "Charter";
+  src: url("../fonts/charter-bold-italic.woff");
   font-weight: bold; font-style: italic;
 }
 @font-face {
